--- a/Catalyst/appsettings.json
+++ b/Catalyst/appsettings.json
@@ -6,7 +6,9 @@
     "AzureADClientSecret": "xqR8Q~f7zKTquqnBS54wLvKjyZNdVMlP8Ztmiauo",
     "SecretName": "Catalyst",
     "SecretNameDev": "CatalystDev",
-    "Heartbeat": "heartbeat"
+    "Heartbeat": "heartbeat",
+    "ConnString": "connstring",
+    "ConnStringDev": "connstringdev"
   },
   "SNMP": {
     "UPSIPAddress": "PowerAlertIP",
